add package scripts